{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 74,
  "lineage": "3aa45de5-a45c-90c3-dc9a-4b4122282e93",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0cf6f02e305e95b7e"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0cf6f02e305e95b7e"
                ]
              }
            ],
            "id": "igw-0e0c1255dac21c7a6",
            "internet_gateway_id": "igw-0e0c1255dac21c7a6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "rs-igw-jenkins-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071dcb7d4a4e7af8c",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-037ce22d7e5273c55",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-037ce22d7e5273c55",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mile-terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-02c61668b830d2910",
            "private_dns": "ip-10-10-20-224.eu-west-1.compute.internal",
            "private_ip": "10.10.20.224",
            "public_dns": "ec2-3-248-218-224.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.218.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f43d2d610616a92f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045224328322970c9",
            "tags": {
              "Name": "miles-destroy_vagrant_style"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048e67da38ad27e3c"
            ]
          },
          "depends_on": [
            "aws_key_pair.deployer",
            "aws_security_group.allow_tls_milo",
            "aws_subnet.my_subnet",
            "data.template_file.app_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r_miles",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b03bfec5c2b4533",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "212.161.55.68/32",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0c1255dac21c7a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          },
          "depends_on": [
            "data.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07637e2ba2fa05237",
            "route_table_id": "rtb-02b03bfec5c2b4533",
            "subnet_id": "subnet-045224328322970c9"
          },
          "depends_on": [
            "aws_route_table.r_miles",
            "aws_subnet.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls_milo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-048e67da38ad27e3c",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-048e67da38ad27e3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Use port 3000 to allow access to app",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "Use port 22 to ssh into instance only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls_milo",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-045224328322970c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-045224328322970c9",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "miles-destroy_vagrant_style"
            },
            "vpc_id": "vpc-0cf6f02e305e95b7e"
          }
        }
      ]
    }
  ]
}